--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity
             android:name=".ui.RecipeActivity"
             android:theme="@style/BeiRecipe.RecipeAcivity"/>
+
+        <activity android:name=".ui.EditRecipeActivity"/>
     </application>
 
 </manifest>
