--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+
+
         android:theme="@style/BeiRecipe">
         <activity android:name=".ui.MainActivity"
                   android:theme="@style/BeiRecipe.MainAcivity">
@@ -19,6 +21,7 @@
 
         <activity
             android:name=".ui.RecipeActivity"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/BeiRecipe.RecipeAcivity"/>
 
         <activity android:name=".ui.EditRecipeActivity"
